# AI_Research_Assistant_Agent

./: .gitignore  README.md  pyproject.toml
frontend/: api.py  app.py  styles.css
src/: config.py  main.py
src/agent/: agent.py
src/api/: chat.py  chat_router.py  rag_router.py  schemas.py
src/embeddings/: embedding_model.py  model.py  service.py  similarity.py
src/graph/: agent.py  nodes.py  state.py  workflow.py
src/llm/: llm_model.py  model.py  prompts.py  service.py
src/memory/: checkpointer.py  history.py  manager.py  retriever.py  service.py  store.py
src/prompts/: chat_prompt.py  router_prompt.py
src/rag/: chain.py  indexer.py  loader.py  prompts.py  splitter.py  vectorstore.py
src/store/: ingester.py  vectorstore.py
src/tools/: calculator.py  pdf_loader.py  rag_tool.py  search.py  web_search.py
src/utils/: build_conversation.py  docs_loader.py  message_parser.py
src/vectors/: ingester.py
tests/: test_chat.py  test_chroma.py  test_embeddings.py  test_graph.py  test_indexer.py  test_llm.py  test_loader.py  test_prompt.py  test_rag.py  test_runnable_methods.py  test_semantic_search.py  test_splitter.py
typings/langgraph/: callbacks.pyi  errors.pyi  runtime.pyi  types.pyi  warnings.pyi
typings/langgraph/_internal/: __init__.pyi  _config.pyi  _constants.pyi  _replay.pyi  _runnable.pyi  _serde.pyi  _timeout.pyi
typings/langgraph/channels/: delta.pyi
typings/langgraph/graph/: _node.pyi  state.pyi
typings/langgraph/pregel/: _algo.pyi  _call.pyi  _checkpoint.pyi  _loop.pyi  _messages.pyi  _read.pyi  _retry.pyi  _runner.pyi  _tools.pyi  (+4 more)
(+13 files in other folders)
