[project]
name = "ai-research-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
    "uvicorn>=0.51.0",
]
